fix: scrollbar firefox again

--- a/apps/frontend/src/styles/main.css
+++ b/apps/frontend/src/styles/main.css
@@ -219,7 +219,6 @@ button {
 
 html {
   scrollbar-width: thin; /* auto, thin or none */
-  scrollbar-color: rgba(253, 253, 253, 0) rgba(253, 253, 253, 0); /* thumb, track */
 }
 
 html::-webkit-scrollbar-thumb:hover {
